@@ -3,7 +3,10 @@
 mptcpanalyzer 0.3.1:
 - compatibility with cmd 0.9.7 (colorization/autocompletion)
 - require python 3.7 to use @dataclass attribute. This allows better static checking
-- bumped requirement to pandas >= 0.24 because of Int64
+- bumped requirement to pandas >= 0.24.1 because of Int64
+- added a tcp_summary command
+- renamed summary to mptcp_summary
+- now looks for SYNs and SYN/ACK specifically instead of assuming clocks are synchronized
 
 
 mptcpanalyzer 0.3:
